# book-head-first-design-patterns

./: .bumpversion.cfg  pyproject.toml
hfdesignpatterns/decorator/: bevarages.py  condiments.py  starbuzzcoffee.py
hfdesignpatterns/factory/: pizzas.py  pizzastores.py
hfdesignpatterns/factory_idiom/: pizzas.py  pizzashop.py  simplepizzafactory.py
hfdesignpatterns/observer/: displays.py  observer.py  weatherdata.py  weatherstation.py
hfdesignpatterns/singleton/: singleton.py
hfdesignpatterns/strategy/: ducks.py
hfdesignpatterns/strategy/behaviours/: fly.py  quack.py
tests/: test_hfdesignpatterns.py
tests/strategy/: test_miniducksimulator.py
